Fix page.scss add z-index to pseudo elements

--- a/css/bootstrap-dark.css
+++ b/css/bootstrap-dark.css
@@ -10952,6 +10952,7 @@ textarea.form-control-lg {
   width: 3rem;
   transform: rotate(45deg) translateX(-75%);
   opacity: 97%;
+  z-index: 1000;
 }
 .page-picture::after {
   content: "";
@@ -10963,6 +10964,7 @@ textarea.form-control-lg {
   width: 3rem;
   transform: rotate(45deg) translateX(75%);
   opacity: 97%;
+  z-index: 1000;
 }
 .page-picture-full img {
   min-height: 50vh;
