--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -10948,6 +10948,7 @@ textarea.form-control-lg {
   width: 3rem;
   transform: rotate(45deg) translateX(-75%);
   opacity: 97%;
+  z-index: 1000;
 }
 .page-picture::after {
   content: "";
@@ -10959,6 +10960,7 @@ textarea.form-control-lg {
   width: 3rem;
   transform: rotate(45deg) translateX(75%);
   opacity: 97%;
+  z-index: 1000;
 }
 .page-picture-full img {
   min-height: 50vh;
